[project]
name = "influxdb-backup-daily"
version = "0.1.0"
description = "InfluxDB数据库每日备份工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paramiko>=3.0.0",
    "requests>=2.32.5",
]

# 使用国内源配置
[tool.uv.sources]
[tool.uv.sources.pypi]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"  # 清华大学源

# 备选源
[tool.uv.sources.alibaba]
url = "https://mirrors.aliyun.com/pypi/simple"  # 阿里云源
